test/bad/b2.erl
-module (b2).

f3(X,Y) -> X + Y ;
f3(X,Y) -> X = "", X+ Y.

f4(X,Y) -> X + Y ;
f4(X,Y) -> "".





